--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,23 +1,201 @@
 .header {
-    border: 1px solid black;
+    position: relative;
     width: 100%;
     height: 100px;
 
+    &__hidden {
+        position: absolute;
+        width: 100%;
+        height: 0;
+        top: 100%;
+        left: 0;
+        background-color: #fff;
+
+        border-bottom: 1px solid #c0c0c0; /* 기본적으로 보이지 않음 */
+        opacity: 0; /* 기본적으로 숨김 */
+        transition: 0.3s; /* 높이와 투명도 애니메이션 */
+
+        &.visible {
+            height: 300px;
+            opacity: 1;
+            transition: 0.3s;
+        }
+    }
+
     &__dumy {
+        position: relative;
         width: 100%;
         height: 100px;
         position: fixed;
 
+        &.visible {
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
         &__box {
-            border: 1px solid blue;
+            max-width: 1700px;
+            position: relative;
             width: 95%;
             height: 100%;
-            margin: auto;
+            margin: 0 auto;
 
             &__menu {
-                display: flex;
+                //display: flex;
+                float: left;
+                width: calc(100% - 180px);
                 height: 100%;
+
+                .brand,
+                .menu,
+                .store {
+                    float: left;
+                }
+
+                .community,
+                .franchise {
+                    float: right;
+                }
+
+                .brand,
+                .menu,
+                .store,
+                .community,
+                .franchise {
+                    height: 100%;
+                    position: relative;
+
+                    .eng {
+                        display: flex;
+                        align-items: center;
+
+                        width: fit-content;
+                        height: 100%;
+
+                        margin: 0 40px;
+
+                        text-decoration: none;
+
+                        span {
+                            font-size: 18px;
+                            font-weight: 700;
+                        }
+                    }
+
+                    ul {
+                        padding: 15px 40px;
+                        position: absolute;
+
+                        height: 0;
+
+                        top: 100%;
+                        left: 0;
+
+                        overflow: hidden;
+                        box-sizing: border-box;
+
+                        transition: 0.3s;
+
+                        &.visible {
+                            height: 300px;
+                            transition: 0.3s;
+                        }
+
+                        li > a {
+                            display: flex;
+                            align-items: center;
+                            height: 45px;
+                            white-space: nowrap;
+                        }
+
+                        li > a > span {
+                            font-size: 16;
+                            font-weight: 600;
+                        }
+                    }
+                }
+
+                .brand {
+                    .eng {
+                        margin-left: 0;
+                    }
+
+                    ul {
+                        padding-left: 0;
+                    }
+                }
+            }
+
+            &__sns {
+                display: flex;
+                align-items: center;
+                float: right;
+                height: 100%;
+
+                li {
+                    margin-left: 10px;
+                }
+
+                a {
+                    display: block;
+                    width: 20px;
+                    height: 20px;
+                    object-fit: contain;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                    }
+                }
+
+                .youtube {
+                    img {
+                        object-fit: cover;
+                    }
+                }
+
+                .tiktok {
+                    img {
+                        object-fit: contain;
+                        transform: scale(1.3);
+                    }
+                }
+            }
+
+            &__logo {
+                width: 200px;
+                height: 100%;
+
+                position: absolute;
+                top: 0px;
+                left: 50%;
+                transform: translateX(-50%);
+
+                background-color: #fff;
+
+                .logowrap {
+                    display: flex;
+                    align-items: center;
+                    flex-direction: column;
+                    width: 100%;
+                    height: 100%;
+
+                    span {
+                        display: block;
+                        height: 70px;
+
+                        img {
+                            display: block;
+                            object-fit: contain;
+                        }
+                    }
+                }
             }
         }
     }
+}
+
+.hidden {
+    position: fixed;
+    left: -10000px;
 }
