--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -181,10 +181,16 @@
                     height: 100%;
 
                     span {
-                        display: block;
+                        margin: auto;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: auto;
                         height: 70px;
 
                         img {
+                            width: 100%;
+                            height: 100%;
                             display: block;
                             object-fit: contain;
                         }
